# ChangeLog for dev-ruby/hoe
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.33 2008/06/18 16:37:15 graaff Exp $

*hoe-1.6.0 (18 Jun 2008)

  18 Jun 2008; Hans de Graaff <graaff@gentoo.org> +hoe-1.6.0.ebuild:
  Version bump: adds blog categories.

*hoe-1.5.3 (22 May 2008)

  22 May 2008; Hans de Graaff <graaff@gentoo.org> +hoe-1.5.3.ebuild:
  Version bump: minor bugfixes

  22 May 2008; Hans de Graaff <graaff@gentoo.org> -hoe-1.2.2.ebuild,
  -hoe-1.3.0.ebuild, -hoe-1.5.0.ebuild:
  Remove old versions

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> hoe-1.5.1.ebuild:
  ia64 stable wrt #217389

  13 Apr 2008; Markus Rothe <corsair@gentoo.org> hoe-1.5.1.ebuild:
  Stable on ppc64; bug #217389

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org> hoe-1.5.1.ebuild:
  Stable on x86 (bug #217389)

  12 Apr 2008; nixnut <nixnut@gentoo.org> hoe-1.5.1.ebuild:
  Stable on ppc wrt bug 217389

  12 Apr 2008; Hans de Graaff <graaff@gentoo.org> hoe-1.5.1.ebuild:
  Mark stable on amd64, bug #217389

  15 Mar 2008; nixnut <nixnut@gentoo.org> hoe-1.4.0.ebuild:
  Stable on ppc wrt bug 213250

  14 Mar 2008; Raúl Porcel <armin76@gentoo.org> hoe-1.4.0.ebuild:
  ia64 stable

  13 Mar 2008; Brent Baude <ranger@gentoo.org> hoe-1.4.0.ebuild:
  stable ppc64, bug 213250

  13 Mar 2008; Dawid Węgliński <cla@gentoo.org> hoe-1.4.0.ebuild:
  Stable on x86 (bug #213250)

  13 Mar 2008; Hans de Graaff <graaff@gentoo.org> hoe-1.4.0.ebuild:
  Mark stable on amd64

*hoe-1.5.1 (05 Mar 2008)

  05 Mar 2008; Richard Brown <rbrown@gentoo.org> +hoe-1.5.1.ebuild:
  Version bump.

  01 Feb 2008; Joshua Nichols <nichoj@gentoo.org> hoe-1.5.0.ebuild:
  Updated dependencies.

*hoe-1.5.0 (31 Jan 2008)

  31 Jan 2008; Hans de Graaff <graaff@gentoo.org> +hoe-1.5.0.ebuild:
  Version bump: 9 minor enhancements.

*hoe-1.4.0 (23 Dec 2007)

  23 Dec 2007; Hans de Graaff <graaff@gentoo.org> +hoe-1.4.0.ebuild: